--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
 <body>
 
-    <div style="margin-top: 25%;"class="container">
+    <div style="margin-top: 15%;"class="container">
         <div class="row">
             <div class="col-sm-12 col-md-4">
                 <form action="" method="post">
-                    <input class="message" type="text" name="answer" placeholder="Enter Your Name?">
-                    <button type="submit">Submit</button>
+                    <input style="width:100%" class="message" type="text" name="Fname" placeholder="Enter Your Name for a specialised Todo list?">
+                    <button style="margin-top: 20px;" type="submit">Submit</button>
                 </form>
 
             </div>
